# CapsuleShooter

./: Cargo.toml
src/: cartridge.rs  enemy.rs  health.rs  lerp.rs  main.rs  shooting.rs
